更改构建基础镜像
采用scratch简化镜像大小

--- a/deployment/deployment.yaml
+++ b/deployment/deployment.yaml
@@ -22,7 +22,7 @@ spec:
     spec:
       serviceAccountName: helm-wrapper
       containers:
-        - image: <image>
+        - image: helm-proxy:v1
           imagePullPolicy: IfNotPresent
           name: helm-wrapper
           readinessProbe:
