--- a/deployment/service.yaml
+++ b/deployment/service.yaml
@@ -8,9 +8,9 @@ metadata:
   namespace: kube-system
 spec:
   ports:
-    - port: 80
+    - port: 8080
       protocol: TCP
       targetPort: 8080
   selector:
     app: helm-wrapper
-  type: ClusterIP
+  type: NodePort
