新增gin框架中间件 控制服务

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -3,6 +3,9 @@ logFileName: app
 logFileExt: .log
 writeTimeout: 60
 readTimeout: 60
+defaultContextTimeout: 60
+#runMode: release debug test
+runMode: release
 uploadPath: /tmp/charts
 helmRepos:
 #  - name: bitnami
