更新 gin-metricsv0.1.1版本 解决指标路径问题

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -5,7 +5,7 @@ writeTimeout: 60
 readTimeout: 60
 defaultContextTimeout: 60
 #runMode: release debug test
-runMode: release
+runMode: debug
 uploadPath: /tmp/charts
 helmRepos:
 #  - name: bitnami
